# foundational_tsmodel

./: Makefile  README.md  evaluator.py  main.py  model.py  pyproject.toml  utils.py
model_registry/: chronos.py  nixtla_nfmodel.py  nixtla_sfmodel.py
src/: data.py  evaluator.py  model.py  utils.py
