[tool.poetry]
name = "foundational-tsmodel"
version = "0.1.0"
description = ""
authors = ["Michael C. J. Kao <mkao006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
pandera = "^0.19.3"
datasetsforecast = "^0.0.8"
pydantic = "^2.7.1"
statsforecast = "^1.7.5"
neuralforecast = "^1.7.2"
mlforecast = "^0.13.0"
lightgbm = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
